--- a/ayyagari.tex
+++ b/ayyagari.tex
@@ -33,7 +33,7 @@
 \maketitle
 
 \begin{abstract}
-Equipotential curves, also known as isolines, are lines of constant electric potential where a charged object does no work moving along them. These lines determine the direction of an electric field (represented by a vector field) as the direction of the field at a point will be perpendicular to an equipotential line. To simulate these equipotential lines, we used two oppositely charged hex nuts to observe the relationship between potential and electric fields. After measuring the potential at every point on a 6 x 6 plane, we used Matplotlib to generate graphs of both equipotentials and predicted electric field lines. These experimental findings can help predict the path DNA molecules will take through a gel electrophoresis rig.
+Equipotential curves, also known as isolines, are lines of constant electric potential where a charged object does no work moving along them. These lines determine the direction of an electric field (represented by a vector field) as the direction of the field at a point will be perpendicular to an equipotential line. To simulate these equipotential lines, we used two oppositely charged hex nuts to observe the relationship between potential and electric fields. After measuring the potential at every point on a 6 x 6 cm plane, we used Matplotlib to generate graphs of both equipotentials and predicted electric field lines. These experimental findings can help predict the path DNA molecules will take through a gel electrophoresis rig.
 \end{abstract}
 
 \begin{IEEEkeywords}
