--- a/lab.bib
+++ b/lab.bib
@@ -51,6 +51,13 @@ author={Urry, Lisa and Cain, Michael L and Wasserman, Steven A and Minorsky, Pet
 year={2021},
 publisher={Pearson}}
 
+@book{stewart,
+title={Multivariable Calculus},
+author={Stewart, James and Clegg, Daniel and Watson, Saleem},
+year={2020},
+edition={9th},
+publisher={Cengage}}
+
 
 @Article{         harris2020array,
  title         = {Array programming with {NumPy}},
