--- a/ayyagari.tex
+++ b/ayyagari.tex
@@ -18,10 +18,19 @@
 
 
 \title{Computational Mapping Analysis of Equipotential and Electric Field Lines in Gel Electrophoresis Rig}
-\author{Saketh Ayyagari\thanks{Author for correspondence: 425sayyagari@frhsd.com}, Victoria Collemi, Krish Shah, and Kevin Tomazic\thanks{Authors are with the Science \& Engineering Magnet Program, Manalapan High School, 20 Church LAne, Englishtown, NJ 07726, USA}}
+\author{Saketh Ayyagari\thanks{Author for correspondence: 425sayyagari@frhsd.com}, Victoria Collemi, Krish Shah, and Kevin Tomazic\thanks{Authors are with the Science \& Engineering Magnet Program, Manalapan High School, 20 Church Lane, Englishtown, NJ 07726, USA}}
 \date{\today}
 \markboth{Journal of Science \& Engineering, Vol.~1, No.~2,~December x 2024}{Ayyagari \MakeLowercase{\textit{et al.}}: Computational Mapping Analysis in Gel Electrophoresis Rig}
 \setcounter{page}{1}
+\newcommand{\keywords}{electric potential, equipotential lines, electric field visualizations, saline conductive medium, electrostatics, electric field mapping, data visualization in electrostatics, gel electrophoresis, electric field dynamics}
+\makeatletter
+\AtBeginDocument{
+\hypersetup{%
+pdftitle={\@title},
+pdfauthor={\@author},
+pdfsubject={physics},
+pdfkeywords={\keywords}}}
+\makeatother
 
 
 
@@ -37,7 +46,7 @@ Equipotential curves, also known as isolines, are lines of constant electric pot
 \end{abstract}
 
 \begin{IEEEkeywords}
-electric potential, equipotential lines, electric field visualizations, saline conductive medium, electrostatics, electric field mapping, data visualization in electrostatics, gel electrophoresis, electric field dynamics.
+\keywords
 \end{IEEEkeywords}
 
 \section{Introduction}
