--- a/ayyagari.tex
+++ b/ayyagari.tex
@@ -173,7 +173,7 @@ We thank several anonymous reviewers whose comments helped our manuscript.  SA c
 \bibliographystyle{IEEEtran}
 \bibliography{lab.bib}
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{sayyagari.jpeg}}]{Saketh Ayyagari} is a senior in the Science and Engineering Magnet Program at Manalapan High School. He is also an intern at Commvault in Tinton Falls, NJ, is a member of the Cyber Security Team, and is captain of the FIRST Technology Challenge robotics team \#13115 Brave Robotics. 
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{sayyagari.jpeg}}]{Saketh Ayyagari} is a senior in the Science and Engineering Magnet Program at Manalapan High School. He is also an intern at Commvault in Tinton Falls, NJ, founder of the Cyber Security Club, member of the Cyber Security Team, and captain of the FIRST Technology Challenge robotics team \#13115 Brave Robotics. 
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{vcollemi.jpeg}}]{Victoria Collemi} is a senior in the Science and Engineering Magnet Program at Manalapan High School. She is also an intern at Girl in Space Club, president of the Robotics Club, and founder and president of the Rocketry Club. 
